--- a/git/Cargo.toml
+++ b/git/Cargo.toml
@@ -6,4 +6,5 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+libflate = "2.0.0"
 sha1 = "0.10.6"
