[FIX] Compatibilización de trees
Co-authored-by: melijauregui <melijauregui@users.noreply.github.com>

--- a/git/Cargo.toml
+++ b/git/Cargo.toml
@@ -10,3 +10,12 @@ sha1 = "0.10.6"
 libflate = "2"
 chrono = "0.4.31"
 hex = "0.4.3"
+flate2 = "1.0.20"
+
+[[bin]]
+name = "git"
+path = "src/main.rs"
+
+[[bin]]
+name = "deflate_tree"
+path = "src/commands/deflate_tree.rs"
