--- a/git/Cargo.toml
+++ b/git/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+flate2 = "1.0.20"
 sha1 = "0.10.6"
 libflate = "2"
 chrono = "0.4.31"
