[FEAT] agregamos el glade [FEAT] casi todo de log [WIP] impresiones de glade

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,7 @@
 {
     "rust-analyzer.linkedProjects": [
-        "Cargo.toml"
+        "Cargo.toml",
+        "./git-interface/Cargo.toml",
+        "./git-interface/Cargo.toml"
     ]
 }
