--- a/git-server/Cargo.toml
+++ b/git-server/Cargo.toml
@@ -6,8 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-sha1 = "0.10.6"
 chrono = "0.4.31"
-hex = "0.4.3"
-flate2 = "1.0.20"
 git-lib = { path = "../git-lib" }
+serde = "1.0.193"
+serde_json = "1.0.108"
