--- a/git-server/Cargo.toml
+++ b/git-server/Cargo.toml
@@ -8,5 +8,5 @@ edition = "2021"
 [dependencies]
 chrono = "0.4.31"
 git-lib = { path = "../git-lib" }
-serde = "1.0.193"
+serde = { version = "1.0.192", features = ["derive"] }
 serde_json = "1.0.108"
